lam not de